backend working. post, get, get details of article

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "multer": "^2.0.0-rc.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
     "pipeline": "^0.1.3",
     "uuid": "^8.3.1"
