--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "start-auth": "nodemon ./routes/users.js"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -19,7 +18,7 @@
     "morgan": "~1.9.1",
     "multer": "^2.0.0-rc.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.6",
+    "nodemon": "^2.0.7",
     "pipeline": "^0.1.3",
     "uuid": "^8.3.1"
   }
