--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
@@ -21,6 +21,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "pipeline": "^0.1.3",
+    "serve": "^11.3.2",
     "uuid": "^8.3.1"
   }
 }
